# vk_graffiti_bot

./: CMakeLists.txt  README.md
group_data/: group_data.json
include/: base_vk_bot.hpp  curl_wrapper.hpp  graffiti_bot.hpp  utils.hpp  vk_api.hpp
sources/: main.cpp
